--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </ul>
       </nav>
       <a href="tel:+380441111111">+38 044 111 11 11</a>
-      <a href="">онлайн-запись</a>
+      <a href="#contacts-form">онлайн-запись</a>
     </header>
     <main>
       <section>
@@ -32,10 +32,20 @@
         </div>
         <ul>
           <li>
-            <a href="" target="_blank" rel="noreferrer noopener">Instagram</a>
+            <a
+              href="https://www.instagram.com"
+              target="_blank"
+              rel="noreferrer noopener"
+              >Instagram</a
+            >
           </li>
           <li>
-            <a href="" target="_blank" rel="noreferrer noopener">Youtube</a>
+            <a
+              href="https://www.youtube.com"
+              target="_blank"
+              rel="noreferrer noopener"
+              >Youtube</a
+            >
           </li>
         </ul>
       </section>
@@ -92,7 +102,7 @@
           </li>
           <li><span>Камуфлирование седины</span><span>от 200 грн.</span></li>
         </ul>
-        <a href="">онлайн-запись</a>
+        <a href="#contacts-form">онлайн-запись</a>
       </section>
       <section>
         <ul>
@@ -197,7 +207,7 @@
         </ul>
       </section>
       <div>
-        <section>
+        <section id="contacts-form">
           <h2>Онлайн-запись</h2>
         </section>
         <section id="contacts">
@@ -229,10 +239,20 @@
       <p>&copy; Copyright 2020</p>
       <ul>
         <li>
-          <a href="" target="_blank" rel="noreferrer noopener">Instagram</a>
+          <a
+            href="https://www.instagram.com"
+            target="_blank"
+            rel="noreferrer noopener"
+            >Instagram</a
+          >
         </li>
         <li>
-          <a href="" target="_blank" rel="noreferrer noopener">Youtube</a>
+          <a
+            href="https://www.youtube.com"
+            target="_blank"
+            rel="noreferrer noopener"
+            >Youtube</a
+          >
         </li>
       </ul>
     </footer>
